--- a/index.html
+++ b/index.html
@@ -1,10 +1,115 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title> Hello gand! </title>
+<meta charset="utf-8">
+<title>Responsive Layout</title>
+
+<style>
+<link rel="stylesheet" href="style.css">
+/********** Base styles **********/
+* {
+  box-sizing: border-box;
+}
+h1 {
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+p {
+  border: 1px solid black;
+  background-color: #A52A2A;
+  width: 90%;
+  height: 150px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Helvetica;
+  color: white;
+}
+
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
+} 
+
+/********** Large devices only **********/
+@media (min-width: 1200px) {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+    border: 1px solid green;
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+}
+
+/********** Medium devices only **********/
+@media (min-width: 950px) and (max-width: 1199px) {
+  .Box {
+    float: left;
+    border: 1px solid green;
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 25%;
+  }
+  .col-md-3 {
+    width: 50%;
+  }
+
+  /********** Small devices only **********/
+@media (min-width: 767px) {
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+} 
+
+</style>
 </head>
 <body>
-<h1> hello maki c**</h1>
+<h1>My Lyrics</h1>
+
+<div class="row">
+  <div class="col-lg-3 col-md-6"><p>Si el ritmo te lleva a mover la cabeza
+Ya empezamos como es
+Mi música no discrimina a nadie
+Así que vamos a romper
+Toda mi gente se mueve
+Mira el ritmo cómo los tiene
+Hago música que entretiene
+El mundo nos quiere, nos quiere, me quiere a mí</p></div>
+  <div class="col-lg-3 col-md-6"><p>Me gusta mi reggae
+Tiritiritiririti-Daddy
+(Evo Jedis)
+Cuando yo la vi
+Dije, si esa mujer fuera para mí
+Perdóname, te lo tenía que decir
+'Tás dura, dura
+Dura, dura, dura</p></div>
+  <div class="col-lg-3 col-md-6"><p>Oh Davi, não vai não
+Agora que esse som tá ficando bom
+Oh Davi, não vai não
+Oh Davi, não vai não
+Oh Davi, não vai não
+Agora que esse som tá ficando bom
+Oh Davi, não vai não
+Oh Davi, não vai não</p></div>
+ 
+
+</div>
+
 </body>
 </html>
